--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,4 +1,18 @@
 {
-  "builds": [{ "src": "manage.py", "use": "@vercel/python" }],
-  "routes": [{ "src": "/(.*)", "dest": "manage.py" }]
+  "builds": [
+    {
+      "src": "core/wsgi.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "core/wsgi.py"
+    }
+  ]
 }
